History of Products.minaraad
============================

2.0.10 (unreleased)
-------------------

- Added method getSubscriptionsForMemberId to the SubscriptionManager.
  [maurits]

- Display the duplicate members next to each other.
  [maurits]

- When a user logs in and there is more than one user with the same
  email address, we redirect to a form where he can compare those
  users and select one for deletion.
  [maurits]

- Added CMFPlone/skins/plone_login/login_next.cpy* for customizing.
  [maurits]

- Gave Managers the possibility to list all email addresses that are
  registered for more than one member; see @@minaraad_service.
  [maurits]

- Made form for the apparently already existing @@minaraad_service
  view so members without an email address can be deleted.
  [maurits]

- Renamed @@test_mail to @@send_membership_reminder as that actually
  gives a clue about what that view does.
  [maurits]

- Changed the membership reminder email to fit the new wishes.
  [maurits]

- Allowed use of @@test_mail?memberid=maurits to test the sending of
  the membership reminder.
  [maurits]


2.0.9 (released 29 May 2008)
----------------------------

- Set copyright year to 2008 in colophon.  [maurits]


2.0.8 (released 13 March 2008)
------------------------------

- Get rid of the far too spurious deprecation warnings for
  toLocalizedTime.  [maurits]

- Change word use in email template study.  And just use Dutch.
  [maurits]

- Sort the news items in the email newsletter, just like in the
  listing that is shown on the website.  [maurits]

- Make status message of email sending Dutch instead of English.
  [maurits]

- In email template for Hearing add greetings from Ignace.  [maurits]

- In Email template for Study, move the link above the contact
  information.  [maurits]

- Copy EmailTemplate-Default.pt to EmailTemplate-AnnualReport.pt.
  Change that to fit the info that is available from an AnnualReport.
  [maurits]


2.0.7 (released 13 March 2008)